# robust_fusion_bayesian

./: CMakeLists.txt  README.md  package.xml
cfg/: sensor.yaml  voxel_map.yaml  voxel_map_common.yaml  voxel_map_det_nreg.yaml  voxel_map_det_reg.yaml  voxel_map_mcd_nreg.yaml  voxel_map_mcd_reg.yaml
data/trajectories/office/: 1.txt  2.txt  3.txt
include/robust_semantic/: robust_semantic.hpp
launch/: semanic_map.launch
scripts/: evaluate_all.sh  gather_results.py
src/: robust_semantic.cpp  robust_semantic_node.cpp
